--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,113 +1,86 @@
-<div class="container" >
-    <div class="row">
-        <div class="col-md-12">
-            <div class="well well-sm">
-                <form class="form-horizontal" method="post">
-                    <fieldset>
-                        <legend class="text-center header">Datos Afiliado</legend>
+<div class="page-wrapper bg-blue p-t-100 p-b-100 font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-heading"></div>
+            <div class="card-body">
+                <h2 class="title">Registro Usuario</h2>
+                <form>
+                    <div class="row row-space">
+                        <div class="col-2">
+                            <label for="name">Nombre</label>
+                            <div class="input-group">
+                                <input id="name" data-name="false" #name class="input--style-1" type="text" placeholder="Nombre Ej. Juan Sebastian">
+                                <span class="icon"><i class="fa-solid fa-user i"></i></span>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <label for="apellido">Apellidos</label>
+                            <div class="input-group">
+                                <input class="input--style-1" data-lastname="false" #lastname type="text" id="apellido" placeholder="Apellidos Ej. Rueda Tarazona">
+                                <span class="icon"><i class="fa-solid fa-user-plus i"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-space">
+                        <div class="col-2">
+                            <label for="email">Correo Electronico</label>
+                            <div class="input-group">
+                                <input #email data-email="false" class="input--style-1" type="email" id="email" placeholder="Ej. jsebg.ruedat@gmail.com">
+                                <span class="icon"><i class="fa-solid fa-at i"></i></span>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <label for="number">Telefono</label>
+                            <div class="input-group">
+                                <input #number data-number="false" class="input--style-1" type="number" id="number" placeholder="Ej. 3172466043">
+                                <span class="icon"><i class="fa-solid fa-phone i"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-space">
+                        <div class="col-2">
+                            <label for="date">Fecha de Nacimiento</label>
+                            <div class="input-group">
+                                <input class="input--style-1 js-datepicker" id="date" type="date">
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="input-group-select">
+                                <div class="rs-select2 js-select-simple select--no-search">
+                                    <select name="gender" style="margin-bottom: 14px !important;">
+                                        <option disabled="disabled" selected="selected">--Seleccione Genero---</option>
+                                        <option>Mujer</option>
+                                        <option>Hombre</option>
+                                        <option>Otro</option>
+                                    </select>
+                                    <div class="select-dropdown"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <label for="password"> Contraseña</label>
+                            <div class="input-group">
+                                <input data-muestraj="false" id="password" #password class="input--style-1" id="password" type="password">
+                                <span #boton (click)="cambio1()" class="icon"><img #img class="i imagen-icono"src="./assets/img/eye-slash-solid.svg"/></span>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <label for="password1">Confirmar Contraseña</label>
+                            <div class="input-group">
+                                <input data-muestrak="false" class="input--style-1" #password1 id="password1" type="password">
+                                <span #boton (click)="cambio2()" class="icon"><img #img2 class="i imagen-icono" src="./assets/img/eye-slash-solid.svg"/></span>
+                            </div>
+                        </div>
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center">
-                                <i class="fa fa-user bigicon"></i></span>
-                            <div class="col-12">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <input class="form-control" type="text" placeholder="Primer nombre">
-                                    </div>
-                                    <div class="col-6">
-                                        <input class="form-control" type="text" placeholder="Segundo nombre">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input class="form-control" type="text" placeholder="Primer Apellido">
-                                <input class="form-control" type="text" placeholder="Segundo Apellido">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-address-card bigicon"></i></span>
-                            <div class="col-md-8">
-                                <select class="form-select" aria-label="Default select example">
-                                    <option selected>Tipo de documento</option>
-                                    <option value="1">TI</option>
-                                    <option value="2">CC</option>
-                                    <option value="3">CE</option>
-                                    <option value="3">PS</option>
-                                </select>
-                                <input class="form-control" type="text" placeholder="Número Documento">
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-8">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-calendar bigicon"></i></span>
-                                    <input class="form-control" type="date" placeholder="fecha nacimiento">
-                                </div>
-                            </div>
-                        </div>
-                    </fieldset>
+
+
+
+                    </div>
+                    <div class="p-t-20">
+                        <button class="btn btn--radius btn--green" type="submit">Registrarse</button>
+                    </div>
                 </form>
             </div>
         </div>
-    </div>
-</div>
-
-<div class="container">
-    <form>
-        <legend class="text-center header"> Datos de contacto</legend>
-        <div class="form-group">
-            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
-            <div class="col-md-8">
-                <input id="phone" name="phone" type="text" placeholder="número de celular" class="form-control">
-            </div>
         </div>
-        <div class="form-group">
-            <!-- State Button -->
-            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-mountain-city bigicon"></i></span>
-            <select class="form-control" id="state_id">
-                <option value="">---Seleccione Ciudad---</option>
-                <option value="BOG">Bogotá</option>
-                <option value="CA">Cali</option>
-                <option value="MED">Medellin</option>
-                <option value="BAQ">Barranquilla</option>
-                <option value="BUG">Bucaramanga</option>
-                <option value="PAT">Pasto</option>
-                <option value="CAG">Cartagena</option>
-                <option value="CU">Cucuta</option>
-                <option value="MON">Monteria</option>
-                <option value="VALL">Valledupar</option>
-                <option value="SAN">Santa Marta</option>
-                <option value="MAN">Manizales</option>
-                <option value="LET">Leticia</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa-solid fa-location-dot bigicon"></i></span>
-            <input type="text" class="form-control " placeholder="Dirección, calle, carrera, casa, apto">            
-        </div>
-
-        <div class="form-group">
-            
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                    <input type="email" class="form-control" placeholder="nombre@example.com">
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Contraseña">
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Repetir Contraseña">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" >
-                    <label class="form-check-label" for="exampleCheck1">Acepto terminos y condiciones</label>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" >
-                    <label class="form-check-label" for="exampleCheck1">Acepto tratamiento de datos</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
 </div>
