--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -1,8 +1,27 @@
-.linea_titulo{
-    height: 3px;
-    color: #1D70B7;
+.lineaAzul{
+    background-color:#1D70B7;
+    width: 100%;
+    height: 20px;
 }
-
+.lineaRoja{
+    background-color:#BD1222;
+    width: 100%;
+    height: 20px;
+}
 .btn{
     background-color: #1D70B7;
+}
+.valoresRojo{
+    background-color: #BD1222;
+}
+.valoresAzul{
+    background-color: #1D70B7;
+}
+
+.bordeAzul{
+    border:#1D70B7;
+}
+.card{
+    background-color: #cff4fc4e;
+    border:none;
 }
