--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,6 +1,6 @@
 <div class="nosotros container mt-5">
     <h1 class="titulo text-center"> CONOCE MÁS SOBRE NOSOTROS</h1>
-    <hr class="linea_titulo">
+    <div class="lineaAzul"></div>
     <p class="historia text-center"> Nacimos como una institución prestadora de salud enfocada en unir la salud y el
         bienestar de nuestros usuarios y
         sus familias, brindando un entorno hospitalario, de pulcritud y agilidad en todos los procesos, con un foco en
@@ -11,7 +11,7 @@
 <div class="planes container mt-5 mb-5">
 
     <h3 class="titulo text-center">Hagamos equipo por tu salud</h3>
-    <hr class="linea_titulo">
+    <div class="lineaRoja mb-4"></div>
     <table class="table table-striped text-center">
         <thead>
             <tr>
@@ -39,18 +39,23 @@
                 <td>X</td>
             </tr>
             <tr>
-                <td>Habitación Individual en Hospitalización En las Instituciones de la red de atención de Plan Complementario UNIDOS EPS</td>
+                <td>Habitación Individual en Hospitalización En las Instituciones de la red de atención de Plan
+                    Complementario UNIDOS EPS</td>
                 <td>X</td>
                 <td>X</td>
             </tr>
 
             <tr>
-                <td>Atención médica a domicilio las 24 horas del día - Nuestro equipo de profesionales se traslada al lugar donde te encuentres para una mayor comodidad. (Trabajo, Estudio, Casa). - Los medicamentos utilizados durante la atención están incluidos. - El servicio está sujeto a las zonas de cobertura del prestador del servicio.</td>
+                <td>Atención médica a domicilio las 24 horas del día - Nuestro equipo de profesionales se traslada al
+                    lugar donde te encuentres para una mayor comodidad. (Trabajo, Estudio, Casa). - Los medicamentos
+                    utilizados durante la atención están incluidos. - El servicio está sujeto a las zonas de cobertura
+                    del prestador del servicio.</td>
                 <td>X</td>
                 <td>X</td>
             </tr>
             <tr>
-                <td>Traslado en ambulancia Si el personal de atención médica a domicilio determina que requieres traslado en ambulancia, este se realizará sin costo adicional.</td>
+                <td>Traslado en ambulancia Si el personal de atención médica a domicilio determina que requieres
+                    traslado en ambulancia, este se realizará sin costo adicional.</td>
                 <td></td>
                 <td>X</td>
             </tr>
@@ -64,51 +69,56 @@
                 <td>Costo plan</td>
                 <td>Desde $49.000 mensual*</td>
                 <td>Desde $99.000 mensual*</td>
-            </tr> 
+            </tr>
         </tbody>
     </table>
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn text-capitalize text-light" type="button">Realizar registro para afiliación plan complementario</button>
+        <button class="btn text-capitalize text-light" type="button">Realizar registro para afiliación plan
+            complementario</button>
     </div>
 </div>
 
 <div class="titulo container">
-    <h3 class="valores text-center">Valores</h3>
-    <hr class="linea_titulo ">
+    <h3 class="valoresNosotros text-center">Valores</h3>
+    <div class="lineaAzul mb-4"></div>
 </div>
 
 <div class="cars_valores container align-items-center justify-content-center me-1">
-    <div class="card mb-3" style="max-width: 1000px;">
+    <div class="card mb-3 " style="max-width: 1000px;">
         <div class="row g-0">
+            
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/young-doctor-visits-senior-woman-with-surgical-mask-picture-id1284869164?k=20&m=1284869164&s=612x612&w=0&h=sRgl50_nQbm4J6Jq8ewDPz4HnR6fno_sVI1zlNVBuys="
-                    class="img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
+                    class="valoresRojo img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title text-center mt-5">Agilidad </h5>
-                    <p class="card-text text-center">Nos esmeramos por tener siempre una respuesta idónea en el menor tiempo posible
+                    <p class="card-text text-center">Nos esmeramos por tener siempre una respuesta idónea en el menor
+                        tiempo posible
                         antes cada petición de nuestros usuarios en todos los procesos de la compañía.</p>
-
                 </div>
+                
             </div>
         </div>
+        
     </div>
 
-    <div class="card mb-3" style="max-width: 1000px;">
+    <div class="card mb-3 " style="max-width: 1000px;">
         <div class="row g-0">
-            
+
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title text-center mt-5">Respeto</h5>
-                    <p class="card-text text-center">Operamos con un determinante respeto en procesos internos como de atención o
+                    <p class="card-text text-center">Operamos con un determinante respeto en procesos internos como de
+                        atención o
                         interacción con los usuarios, para tener una igualdad de trato como retribución a nuestro
                         servicio.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/female-doctor-waving-and-talking-with-colleagues-through-a-video-call-picture-id1249601252?k=20&m=1249601252&s=612x612&w=0&h=9vGGvCuWYR9I9M6XH2mHTyJUnK6KHZhzVOllhnq3cDE="
-                    class="img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
+                    class="valoresAzul img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
             </div>
         </div>
     </div>
@@ -118,12 +128,14 @@
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/doctor-writing-a-medical-prescription-picture-id1319031310?k=20&m=1319031310&s=612x612&w=0&h=wy85xfbBKEtnF0XNVKt1v7DSvUBybjBUsJbrJNkskTY="
-                    class="img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
+                    class="valoresRojo img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
+                <!-- <img src="assets/img/logo UNIDOSips.jpeg" class="logo img-fluid rounded-pill ps-3 mt-2 mb-2" alt=""> -->
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title text-center mt-5">Unión</h5>
-                    <p class="card-text text-center ">La salud de cada uno de nuestros usuarios nos une y el deber por mantener familias unidas nos inspira.</p>
+                    <p class="card-text text-center ">La salud de cada uno de nuestros usuarios nos une y el deber por
+                        mantener familias unidas nos inspira.</p>
                 </div>
             </div>
         </div>
@@ -131,73 +143,72 @@
 
     <div class="card mb-3" style="max-width: 1000px;">
         <div class="row g-0">
-            
+
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title text-center mt-5">Integridad</h5>
-                    <p class="card-text text-center">Para que exista unión debemos siempre operar con ética y de la manera correcta
+                    <p class="card-text text-center">Para que exista unión debemos siempre operar con ética y de la
+                        manera correcta
                         así garantizar un servicio de excelencia para nuestros usuarios y mantener la felicidad en el
                         estado de salud</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/puzzle-jigsaw-heart-on-brain-mental-health-concept-world-autism-day-picture-id1210226489?k=20&m=1210226489&s=612x612&w=0&h=qOouuO_MHX9HkdyN0ID6aBrItD3TBqxnxhuoRbOhjII="
-                    class="img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
+                    class="valoresRojo img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
             </div>
         </div>
     </div>
-    
 </div>
 
-<hr class="linea_titulo mt-1 container">
 
 
+<div class="aliados container">
+    <h3 class="carrusel_aliados  text-center mt-5 ">Aliados</h3>
+    <div class="lineaRoja"></div>
 
+    <div class="aliados container d-flex align-items-center justify-content-center me-1">
 
-<h3 class="carrusel_aliados  text-center mt-5 ">Aliados</h3>
-<hr class="linea_titulo container">
-
-<div class="aliados container d-flex align-items-center justify-content-center me-1">
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfWrDT7-99-bZBLMpIIobNqFNRhZhyjpmfCSIodkmvywV0H10u17nr7ICELcasHXErgFc&usqp=CAU"
-                    class="d-block w-50" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://cr00.epimg.net/radio/imagenes/2020/01/14/salud/1579032985_555484_1579037992_noticia_normal.jpg"
-                    class="d-block w-50" alt="...">
-            </div>
-        </div>
-    </div>
-
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://cloudfront-us-east-1.images.arcpublishing.com/semana/NWWXYKLZAFELLDEWDJFJEVAMM4.jpg"
-                    class="d-block w-50" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG_0OHQA90-SUwSJvG2E_Asn4cTc24_8B4dw&usqp=CAU"
-                    class="d-block w-50" alt="...">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfWrDT7-99-bZBLMpIIobNqFNRhZhyjpmfCSIodkmvywV0H10u17nr7ICELcasHXErgFc&usqp=CAU"
+                        class="d-block w-50" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://cr00.epimg.net/radio/imagenes/2020/01/14/salud/1579032985_555484_1579037992_noticia_normal.jpg"
+                        class="d-block w-50" alt="...">
+                </div>
             </div>
         </div>
 
-    </div>
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://www.telefonocolombia.com/wp-content/uploads/2019/06/Sanitas.jpg" class="d-block w-50"
-                    alt="...">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://cloudfront-us-east-1.images.arcpublishing.com/semana/NWWXYKLZAFELLDEWDJFJEVAMM4.jpg"
+                        class="d-block w-50" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG_0OHQA90-SUwSJvG2E_Asn4cTc24_8B4dw&usqp=CAU"
+                        class="d-block w-50" alt="...">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="https://images.ctfassets.net/3klebcd0t2ch/1tnVJSB1mPxei3coTp2l7X/f15822a0d22cc49bad0e085dd1e3ac14/Logotipo_CAFAM.jpg"
-                    class="d-block w-50" alt="...">
+
+        </div>
+
+        <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.telefonocolombia.com/wp-content/uploads/2019/06/Sanitas.jpg"
+                        class="d-block w-50" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://images.ctfassets.net/3klebcd0t2ch/1tnVJSB1mPxei3coTp2l7X/f15822a0d22cc49bad0e085dd1e3ac14/Logotipo_CAFAM.jpg"
+                        class="d-block w-50" alt="...">
+                </div>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
