--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -3,21 +3,24 @@
         <div class="card card-1">
             <div class="card-heading"></div>
             <div class="card-body">
+                <input class="verificacion1" disabled value="" #spanValidarFormulario />
                 <h2 class="title">Registro Usuario</h2>
-                <form>
+                <form [formGroup]="registroGrupo" (ngSubmit)="AnalizandoRegistro()">
                     <div class="row row-space">
                         <div class="col-2">
                             <label for="name">Nombre</label>
                             <div class="input-group">
-                                <input  (click)="cambio3()" id="name" data-name="false" #name class="input--style-1" type="text" placeholder="Nombre Ej. Juan Sebastian">
+                                <input formControlName="name"  (click)="cambio3()" id="name" data-name="false" #name class="input--style-1" type="text" placeholder="Nombre Ej. Juan Sebastian">
                                 <span  #boton   class="icon"><i #iconame class="fa-solid fa-user i"></i></span>
+                                <span class="error" *ngIf="registroGrupo.get('name')?.hasError('required') && registroGrupo.get('name')?.touched">Nombre Obligatorio</span>
                             </div>
                         </div>
                         <div class="col-2">
                             <label for="apellido">Apellidos</label>
                             <div class="input-group">
-                                <input  (click)="cambio4()" class="input--style-1"  data-lastname="false" #lastname type="text" id="apellido" placeholder="Apellidos Ej. Rueda Tarazona">
+                                <input formControlName="lastname" (click)="cambio4()" class="input--style-1"  data-lastname="false" #lastname type="text" id="apellido" placeholder="Apellidos Ej. Rueda Tarazona">
                                 <span #boton class="icon"><i #icolastname class="fa-solid fa-user-plus i"></i></span>
+                                <span class="error" *ngIf="registroGrupo.get('lastname')?.hasError('required') && registroGrupo.get('lastname')?.touched">Apellido Obligatorio</span>
                             </div>
                         </div>
                     </div>
@@ -25,15 +28,21 @@
                         <div class="col-2">
                             <label for="email">Correo Electronico</label>
                             <div class="input-group">
-                                <input (click)="cambio5()"  #email data-email="false" class="input--style-1" type="email" id="email" placeholder="Ej. jsebg.ruedat@gmail.com">
+                                <input formControlName="email"(click)="cambio5()"  #email data-email="false" class="input--style-1" type="email" id="email" placeholder="Ej. jsebg.ruedat@gmail.com">
                                 <span #boton  class="icon"><i #icoemail class="fa-solid fa-at i"></i></span>
+                                <span class="error" *ngIf="registroGrupo.get('email')?.hasError('pattern')">Correo invalido</span>
+                                <span class="error" *ngIf="registroGrupo.get('email')?.hasError('required') && registroGrupo.get('email')?.touched">Correo Obligatorio</span>
                             </div>
                         </div>
                         <div class="col-2">
                             <label for="number">Telefono</label>
                             <div class="input-group">
-                                <input (click)="cambio6()" #number data-number="false" class="input--style-1" type="number" id="number" placeholder="Ej. 3172466043">
+                                <input formControlName="number" (click)="cambio6()" #number data-number="false" class="input--style-1" type="text" id="number" placeholder="Ej. 3172466043">
                                 <span #boton class="icon"><i #iconumber class="fa-solid fa-phone i"></i></span>
+                                <span class="error" *ngIf="registroGrupo.get('number')?.hasError('minLength')">Numero invalido, corto</span>
+                                <span class="error" *ngIf="registroGrupo.get('number')?.hasError('maxLength')">Numero invalido, largo</span>
+                                <span class="error" *ngIf="registroGrupo.get('number')?.hasError('pattern')">Numero invalido</span>
+                                <span class="error" *ngIf="registroGrupo.get('number')?.hasError('required') && registroGrupo.get('number')?.touched">Numero Obligatorio</span>
                             </div>
                         </div>
                     </div>
@@ -41,7 +50,8 @@
                         <div class="col-2">
                             <label for="date">Fecha de Nacimiento</label>
                             <div class="input-group">
-                                <input class="input--style-1 js-datepicker" id="date" type="date">
+                                <input formControlName="date" class="input--style-1 js-datepicker" id="date" type="date">
+                                <span class="error" *ngIf="registroGrupo.get('date')?.hasError('required') && registroGrupo.get('date')?.touched">Fecha Obligatorio</span>
                             </div>
                         </div>
                         <div class="col-2">
@@ -60,17 +70,21 @@
                         <div class="col-2">
                             <label for="password"> Contraseña</label>
                             <div class="input-group">
-                                <input  (click)="cambio7()" data-contra="false"  data-muestraj="false" id="password" #password class="input--style-1" id="password" type="password" style="padding-left: 28px;">
+                                <input formControlName="password" (click)="cambio7()" data-contra="false"  data-muestraj="false" id="password" #password class="input--style-1" id="password" type="password" style="padding-left: 28px;" placeholder="Orlando123@">
                                 <span #boton ><i #icocontra class="fa-solid fa-lock candado"></i></span>
                                 <span #boton (click)="cambio1()" class="icon"><img #img class="i imagen-icono"src="./assets/img/eye-slash-solid.svg"/></span>
+                                <span class="error" *ngIf="registroGrupo.get('password')?.hasError('pattern')">Contraseña Debil invalida.</span>
+                                <span class="error" *ngIf="registroGrupo.get('password')?.hasError('required') && registroGrupo.get('password')?.touched">Contraseña Obligatorio</span>
                             </div>
                         </div>
                         <div class="col-2">
                             <label for="password1">Confirmar Contraseña</label>
                             <div class="input-group">
-                                <input (click)="cambio8()" data-contra1="false" data-muestrak="false" class="input--style-1" #password1 id="password1" type="password" style="padding-left: 28px;">
+                                <input formControlName="password1"(focusout)="ComprobandoPassword()"(click)="cambio8()"  data-contra1="false" data-muestrak="false" class="input--style-1" #password1 id="password1" type="password" style="padding-left: 28px;">
                                 <span #boton ><i #icocontra1 class="fa-solid fa-lock candado"></i></span>
                                 <span #boton (click)="cambio2()" class="icon"><img #img2 class="i imagen-icono" src="./assets/img/eye-slash-solid.svg"/></span>
+                                <span class="error" *ngIf="registroGrupo.get('password1')?.hasError('required') && registroGrupo.get('password1')?.touched">Contraseña Obligatorio</span>
+                                <input class="verificacion" disabled value="" #spanconfirma />
                             </div>
                         </div>
 
@@ -79,7 +93,7 @@
 
                     </div>
                     <div class="p-t-20">
-                        <button class="btn btn--radius btn--green" type="submit">Registrarse</button>
+                        <button class="btn btn--radius btn--green" [disabled]="registroGrupo.invalid" type="submit">Registrarse</button>
                     </div>
                 </form>
             </div>
