--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,72 +1,85 @@
 .d-block{
-width: 100px;
-height: 500px;
+width: 130px;
+height: 450px;
+object-fit:cover;
 }
 
 .card-img-top
 {
-  width: 100px;
-  justify-content: center;
-  align-content: center;
+width: 100px;
 }
 
-.card-img-top2
-  {
-width: 545px;
-height: 220px;
-  }
+.card-img-top2{
+    width: 100%;
+    object-fit: cover;
+}
 
-  .card-img-top3
-  {
+
+.card-img-top3
+{
 width: 90px;
 height: 90px;
-justify-content: center;
-align-items: center;
-margin-left: 70px;
-  }
-
-  .tarjeta
-{
-  background-color: rgb(248, 248, 248);
-
+object-fit: cover;
 }
+
+.tarjeta1
+{
+width: 90%;
+background-color:#D6EAF8;
+border-width:3px;
+}
+
+.tarjeta2
+{
+width: 90%;
+background-color: #D4EFDF ;
+border-width:3px;
+}
+
+.tarjeta3
+{
+width: 90%;
+background-color:#FDEBD0;
+border-width:3px;
+}
+
+
 
 .carrucel{
 width: 100%;
 }
 
 .logo{
-    width: 250px;
-    margin-left: 500px;
+width: 28%;
 }
 
 .espacio{
-  background-color: #1D70B7;
-  height: 20px;
+background-color: #1D70B7;
+height: 20px;
 }
 
 .espacio2{
-  height: 20px;
-  background-color: #BD1222;
+height: 20px;
+background-color: #BD1222;
 }
 
 a:before {
-  content: '';
-  background: #1D70B7;
-  display: block;
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 0;
-  height: 3px;
+content: '';
+background: #1D70B7;
+display: block;
+position: absolute;
+bottom: -3px;
+left: 0;
+width: 0;
+height: 3px;
 }
 
 a:hover {
-  background-position: 0;
-  }
+background-position: 0;
+}
 
-  a:hover::before {
-  width: 100%;
+a:hover::before {
+width: 100%;
 }
 
 a {
@@ -104,3 +117,52 @@ height: 600px;
 color:#BD1222
 }
 
+.slogan{
+  font-size: 1.2rem;
+}
+
+.imagen{
+  width: 150%;
+}
+
+@media (max-width: 768px) {
+  .tarjeta1{
+    width: 100% !important;
+    font-size: 0.9rem;
+}
+.tarjeta2
+{
+  width: 100% !important;
+  font-size: 0.9rem;
+}
+
+.tarjeta3
+{
+  width: 100% !important;
+  font-size: 0.9rem;
+}
+
+}
+
+.frase{
+    font-size: 1.1rem;
+    position: relative;
+    top: 15px;
+    height: 33px;
+}
+
+.carousel-indicators{
+    position: relative;
+    top: 16px;
+    background: #BD1222;
+    width: 100%;
+    margin: auto;
+}
+
+-fa-solid fa-angle-left{
+    font-size: 8rem; color:#ffffff
+}
+
+.fa-solid fa-angle-right{
+    font-size: 8rem;color:#ffffff
+}
