--- a/src/app/components/empresas/empresas.component.html
+++ b/src/app/components/empresas/empresas.component.html
@@ -21,9 +21,9 @@
                     <div class="carousel-item">
                         <img src="assets/img_home/empresas/equipo-correcto-1200x600.jpg" class="d-block w-100 fotos"
                             alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3 class="text-dark">Afrontando retos en equipo</h3>
-                            </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3 class="text-dark">Afrontando retos en equipo</h3>
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -158,7 +158,40 @@
                                 <p class="card-text">Evite que la influenza afecte la productividad en su empresa,
                                     vacúnelos y protéjalos de este virus que incrementa el ausentismo laboral en su
                                     empresa. Un equipo fortalecido, es un equipo imparable.</p>
-                                <button class="btn btn-danger" type="submit">Más información</button>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    Registrese y ¡Vacunese!
+                                </button>
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="mb-3">
+                                                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                                  </div>
+                                                  <div class="mb-3">
+                                                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                                  </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
