--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <router-outlet></router-outlet>
+<app-navbarfija></app-navbarfija>
+<app-navbar></app-navbar>
+<app-nosotros></app-nosotros>
+<app-footer></app-footer>
