--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -25,3 +25,10 @@
     background-color: #cff4fc4e;
     border:none;
 }
+
+.imgNosotros {
+    height: 480px;
+    width: 100%;
+    object-fit: cover;
+}
+
