--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,28 +1,43 @@
-<div class="nosotros container mt-5">
-    <h1 class="titulo text-center"> CONOCE MÁS SOBRE NOSOTROS</h1>
-    <div class="lineaAzul"></div>
-    <p class="historia text-center"> Nacimos como una institución prestadora de salud enfocada en unir la salud y el
-        bienestar de nuestros usuarios y
-        sus familias, brindando un entorno hospitalario, de pulcritud y agilidad en todos los procesos, con un foco en
-        el que la salud de nuestros afiliados no puede dar esperar a los tediosos y concurridos tramites acostumbrados
-        en nuestro país.</p>
+<div class=" container">
+<h1 class="titulo  text-center mt-3 container"> Conoce más sobre nosotros</h1>
+<div class="lineaAzul mb-3"></div>
+</div>     
+
+
+<div class="row">
+    <div class="col12">
+    <img class="imgNosotros mb-3"src="https://cdn.pixabay.com/photo/2016/11/14/03/05/surgery-1822458_1280.jpg" alt="">
 </div>
+</div>
+
+<p class="historia container text-center"> Nacimos como una institución prestadora de salud enfocada en unir la salud y
+    el bienestar de nuestros usuarios y sus familias, brindando un entorno hospitalario, de pulcritud y agilidad en todos los procesos, con un foco en
+    el que la salud de nuestros afiliados no puede dar esperar a los tediosos y concurridos tramites acostumbrados
+    en nuestro país.</p>
+
 
 <div class="planes container mt-5 mb-5">
 
     <h3 class="titulo text-center">Hagamos equipo por tu salud</h3>
-    <div class="lineaRoja mb-4"></div>
+    <div class="lineaRoja mb-3"></div>
+</div>
+
+        
+
+<div class="planes container">
     <table class="table table-striped text-center">
         <thead>
             <tr>
                 <th class="planes table-primary" scope="col">Tipo de plan complementario</th>
                 <th class="planes table-info" scope="col">Plan básico</th>
                 <th class="planes table-warning" scope="col">Plan preferencial</th>
+                <th class="planes table-success" scope="col">No afiliados</th>
             </tr>
             <tr class="segunda_fila table-primary">
                 <th scope="col">Edad de ingreso</th>
                 <th class="planes table-info" scope="col">3 meses - 59 años</th>
                 <th class="planes table-warning" scope="col">3 meses - 69 años</th>
+                <th class="planes table-success" scope="col">Sin limite edad</th>
             </tr>
         </thead>
         <tbody>
@@ -31,16 +46,19 @@
                 <td>Cobertura en toda Colombia</td>
                 <td>X</td>
                 <td>X</td>
+                <td>X</td>
             </tr>
             <tr>
 
                 <td>Acceso directo a especialistas </td>
                 <td>X</td>
                 <td>X</td>
+                <td>X</td>
             </tr>
             <tr>
                 <td>Habitación Individual en Hospitalización En las Instituciones de la red de atención de Plan
                     Complementario UNIDOS EPS</td>
+                <td>X</td>
                 <td>X</td>
                 <td>X</td>
             </tr>
@@ -52,23 +70,27 @@
                     del prestador del servicio.</td>
                 <td>X</td>
                 <td>X</td>
+                <td>X</td>
             </tr>
             <tr>
                 <td>Traslado en ambulancia Si el personal de atención médica a domicilio determina que requieres
                     traslado en ambulancia, este se realizará sin costo adicional.</td>
                 <td></td>
                 <td>X</td>
+                <td>X</td>
             </tr>
             <tr>
                 <td>Medicamentos a domicilio sin costo adicional</td>
                 <td></td>
                 <td>X</td>
+                <td>X</td>
             </tr>
 
             <tr>
                 <td>Costo plan</td>
-                <td>Desde $49.000 mensual*</td>
-                <td>Desde $99.000 mensual*</td>
+                <td>Desde $49.000 mensual</td>
+                <td>Desde $99.000 mensual</td>
+                <td>$150.000 por consulta</td>
             </tr>
         </tbody>
     </table>
@@ -78,15 +100,18 @@
     </div>
 </div>
 
-<div class="titulo container">
+<div class="titulo container mb-2 mt-5">
     <h3 class="valoresNosotros text-center">Valores</h3>
-    <div class="lineaAzul mb-4"></div>
+    <div class="lineaAzul mb-3"></div>
 </div>
+
+        
+
 
 <div class="cars_valores container align-items-center justify-content-center me-1">
     <div class="card mb-3 " style="max-width: 1000px;">
         <div class="row g-0">
-            
+
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/young-doctor-visits-senior-woman-with-surgical-mask-picture-id1284869164?k=20&m=1284869164&s=612x612&w=0&h=sRgl50_nQbm4J6Jq8ewDPz4HnR6fno_sVI1zlNVBuys="
                     class="valoresRojo img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
@@ -98,10 +123,9 @@
                         tiempo posible
                         antes cada petición de nuestros usuarios en todos los procesos de la compañía.</p>
                 </div>
-                
             </div>
         </div>
-        
+
     </div>
 
     <div class="card mb-3 " style="max-width: 1000px;">
@@ -129,7 +153,6 @@
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/doctor-writing-a-medical-prescription-picture-id1319031310?k=20&m=1319031310&s=612x612&w=0&h=wy85xfbBKEtnF0XNVKt1v7DSvUBybjBUsJbrJNkskTY="
                     class="valoresRojo img-fluid rounded-pill ps-3 mt-2 mb-2" alt="...">
-                <!-- <img src="assets/img/logo UNIDOSips.jpeg" class="logo img-fluid rounded-pill ps-3 mt-2 mb-2" alt=""> -->
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -155,20 +178,21 @@
             </div>
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/photos/puzzle-jigsaw-heart-on-brain-mental-health-concept-world-autism-day-picture-id1210226489?k=20&m=1210226489&s=612x612&w=0&h=qOouuO_MHX9HkdyN0ID6aBrItD3TBqxnxhuoRbOhjII="
-                    class="valoresRojo img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
+                    class="valoresAzul img-fluid rounded-pill pe-3 mt-2 mb-2" alt="...">
             </div>
         </div>
     </div>
 </div>
 
+<div class="aliados container mb-3">
+    <h3 class="carrusel_aliados  text-center mt-5">Aliados</h3>
+    <div class="lineaRoja mb-4"></div>
+</div>
 
+        
 
-<div class="aliados container">
-    <h3 class="carrusel_aliados  text-center mt-5 ">Aliados</h3>
-    <div class="lineaRoja"></div>
-
+<div class="container">
     <div class="aliados container d-flex align-items-center justify-content-center me-1">
-
         <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -194,7 +218,6 @@
                         class="d-block w-50" alt="...">
                 </div>
             </div>
-
         </div>
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade w-100 p-4" data-bs-ride="carousel">
