--- a/src/app/components/citas/citas.component.html
+++ b/src/app/components/citas/citas.component.html
@@ -1,3 +1,5 @@
+<app-navbarfija></app-navbarfija>
+<app-navbar></app-navbar>
 <div class="py-10 " style="background: #f0f0f0;">
     <div class="container mx-auto  ">
         <h1 class="font-black text-5xl text-center md:w-2/3 mx-auto">Seguimientos de tus Citas <span
@@ -54,7 +56,7 @@
                             Obligatorio</span>
                     </div>
                     <div class="mb-5">
-                        <label htmlFor="sintomas" class="block text-gray-700 uppercase font-bold">Fecha de Alta</label>
+                        <label htmlFor="sintomas" class="block text-gray-700 uppercase font-bold">Fecha de la Cita</label>
                         <textarea #sintomas formControlName="sintomas"
                             class="border-2 w-full p-2 mt-2 placeholder-gray-400 rounded-md" id="sintomas"
                             placeholder="Describe los sintomas"></textarea>
@@ -89,7 +91,7 @@
                     <p class="font-bold mb-3 text-gray-700 uppercase">Email:
                         <span class="font-normal normal-case">{{control.email}}</span>
                     </p>
-                    <p class="font-bold mb-3 text-gray-700 uppercase">Fecha Alta:
+                    <p class="font-bold mb-3 text-gray-700 uppercase">Fecha de la Cita:
                         <span class="font-normal normal-case">{{control.fecha}}</span>
                     </p>
                     <p class="font-bold mb-3 text-gray-700 uppercase">Síntomas:
@@ -104,8 +106,8 @@
                 </div>
                 <ng-template #loading>
                     <div>
-                        <h2 class="font-black text-3xl text-center">No hay pacientes</h2>
-                        <p class="text-xl mt-5 mb-10 text-center">Comienza agregando pacientes
+                        <h2 class="font-black text-3xl text-center">No hay citas</h2>
+                        <p class="text-xl mt-5 mb-10 text-center">Comienza agregando Citas
                             <span class="text-indigo-600 font-bold">aparecerán en este lugar</span>
                         </p>
                     </div>
