--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,16 +4,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            
+
             <ul class="navbar-nav me-auto mb-3 ms-4 mb-lg-0  menu">
                 <li class="nav-item">
                     <a class="inicio nav-link ps-3 pe-3 pt-1 pb-1" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="citas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#"tabindex="-1" aria-disabled="true">Citas</a>
+                    <a class="citas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#"tabindex="-1" [routerLink]="['/citas']" aria-disabled="true">Citas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="registro nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Registro</a>
+                    <a class="registro nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1"[routerLink]="['/registro']" aria-disabled="true">Registro</a>
                 </li>
                 <li class="nav-item">
                     <a class="nosotros nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Nosotros</a>
@@ -21,7 +21,7 @@
                 <li class="nav-item">
                     <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Empresas</a>
                 </li>
-            </ul>   
+            </ul>
         </div>
         <div class="redes d-flex">
             <form class=" d-flex busqueda">
@@ -31,9 +31,9 @@
             <div class="iconosnav d-flex ms-1">
                 <i class="localicacion fa-solid fa-location-dot mb-4 mt-4"></i>
                 <i class="telefono ms-2 fa-solid fa-phone mt-4 mb-4"></i>
-            </div> 
+            </div>
         </div>
     </div>
 
-    
+
 </nav>
