--- a/src/app/components/empresas/empresas.component.html
+++ b/src/app/components/empresas/empresas.component.html
@@ -170,24 +170,50 @@
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                <h5 class="modal-title" id="exampleModalLabel">Registresé y !Vacunesé¡
+                                                </h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
-                                                <div class="mb-3">
-                                                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                                                  </div>
-                                                  <div class="mb-3">
-                                                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                                  </div>
+                                                <form>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Nombre</label>
+                                                        <input type="text" formControlName="nombre"
+                                                            class="form-control">
+                                                        <!-- <span style="color: red;" *ngIf="productoForm.get('nombre')?.hasError('required') && productoForm.get('nombre')?.touched">Nombre Obligatorio</span> -->
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Número de documento</label>
+                                                        <input type="text" formControlName="nombre"
+                                                            class="form-control">
+                                                        <!-- <span style="color: red;" *ngIf="productoForm.get('nombre')?.hasError('required') && productoForm.get('nombre')?.touched">Nombre Obligatorio</span> -->
+                                                    </div>
+
+
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Correo electrónico</label>
+                                                        <input type="email" class="form-control"
+                                                            formControlName="email">
+                                                        <!-- <span style="color: red;" *ngIf="productoForm.get('email')?.hasError('pattern')">Correo Invalido</span> -->
+                                                        <!-- <span style="color: red;"*ngIf="productoForm.get('email')?.hasError('required') && productoForm.get('email')?.touched">Correo Obligatorio</span> -->
+                                                        <div class="form-text">Nosostros no compartiremos tu correo con
+                                                            alguien más.
+                                                        </div>
+                                                    </div>
+
+
+                                                    <div class="row justify-content-between">
+                                                        <button type="submit"
+                                                            class="btn btn-primary btn-primary1 col-6">Enviar
+                                                            información</button>
+                                                        <button type="button" data-bs-dismiss="modal" aria-label="Close"
+                                                            class="btn offset-2 btn-primary col-4">Cancelar</button>
+                                                    </div>
+                                                </form>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+
                                             </div>
                                         </div>
                                     </div>
