--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -208,7 +208,7 @@
             <br>
             <h5>ELIJE RESPALDO, SERVICIO DE CALIDAD, HUMANO Y OPORTUNO</h5>
             <br>
-            <p class="fs-5 text-center" href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i> Tenemos la
+            <p class="fs-5 text text-center" href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i> Tenemos la
                 red
                 propia
                 más
