--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
     <div class="container d-flex">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"   data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+            <i class="fa-solid fa-bars icononav"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             
@@ -10,30 +11,28 @@
                     <a class="inicio nav-link ps-3 pe-3 pt-1 pb-1" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="citas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#"tabindex="-1" aria-disabled="true">Citas</a>
+                    <a class="citas nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#"tabindex="-1" aria-disabled="true">Citas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="registro nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Registro</a>
+                    <a class="registro nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">Registro</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nosotros nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Nosotros</a>
+                    <a class="nosotros nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Empresas</a>
+                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">Empresas</a>
                 </li>
-            </ul>   
+            </ul> 
+            <div class="redes d-flex">
+                <form class=" d-flex busqueda">
+                    <input class="form-control busqueda mt-4 mb-4 " type="search" placeholder="Busqueda" aria-label="Search">
+                    <button class="btn buscar ms-2 me-2 mt-4 mb-4 " type="submit"> <b>Buscar</b> </button>
+                </form>
+                    <a href="https://goo.gl/maps/YjvCQN5ozQFu7Nrp9" target="_blank"><i class="localizacion fa-solid fa-location-dot mb-4 mt-4"></i></a>
+                    <a href="https://wa.link/22etyb" target="_blank"><i class="telefono ms-2 fa-solid fa-phone mt-4 mb-4"></i></a>
+                    
+            </div>
         </div>
-        <div class="redes d-flex">
-            <form class=" d-flex busqueda">
-                <input class="form-control busqueda mt-4 mb-4 " type="search" placeholder="Busqueda" aria-label="Search">
-                <button class="btn buscar ms-2 me-2 mt-4 mb-4 " type="submit"> <b>Buscar</b> </button>
-            </form>
-            <div class="iconosnav d-flex ms-1">
-                <i class="localicacion fa-solid fa-location-dot mb-4 mt-4"></i>
-                <i class="telefono ms-2 fa-solid fa-phone mt-4 mb-4"></i>
-            </div> 
-        </div>
+        
     </div>
-
-    
 </nav>
