--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+
 .menu {
     touch-action: manipulation;
     cursor: pointer;
@@ -80,7 +81,11 @@
     background-color: #1D70B7;   
 }
 
-.iconosnav{
+.localizacion{
+    color:#1D70B7;
+    font-size: 30px;
+}
+.telefono{
     color:#1D70B7;
     font-size: 30px;
 }
@@ -89,5 +94,16 @@
     color: #bd1223;
 }
 
+.busqueda{
+    margin-left: 40px;
+}
+
+.icononav:hover{
+    color: #1D70B7;
+}
+.icononav{
+    color: #BD1222 ;
+    border-radius: 5px;
+} 
 /* #1D70B7 */
 /* #BD1222 */
