--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="row">
         <div class="col-12">
@@ -86,7 +87,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center mt-4 mt-2">¿Cómo te podemos ayudar?</h2>
+            <h2 class="text-center mt-2">¿Cómo te podemos ayudar?</h2>
             <h5 class="text-center  fw-light"> Estos son todos los servicios que ofrecemos en Unidos Ips</h5>
         </div>
     </div>
