--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
                     <a class="nosotros nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">Empresas</a>
+                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-1" href="#" tabindex="-1" aria-disabled="true">empresas</a>
                 </li>
             </ul> 
             <div class="redes d-flex">
@@ -33,6 +33,5 @@
                     
             </div>
         </div>
-        
     </div>
 </nav>
